# mint-jobs-be

./: .dockerignore  .env.example  .gitignore  CHANGELOG_FRONTEND.md  CHAT_FRONTEND.md  ESCROW_FRONTEND.md  FRONTEND_CHANGES.md  LAUNCHPAD_CHAT_GUIDE.md  LAUNCHPAD_FRONTEND_GUIDE.md  MILESTONES_FRONTEND.md  NOTIFICATIONS_FRONTEND.md  README.md  config.ts  docker-compose.override.example.yml  docker-compose.yml  ecosystem.config.cjs  handle-token-creation.ts  nest-cli.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  tsconfig.paths.json
apps/api-gateway/: tsconfig.app.json
apps/auth-service/: tsconfig.app.json
apps/chat-service/: tsconfig.app.json
apps/escrow-service/: tsconfig.app.json
apps/job-service/: tsconfig.app.json
apps/launchpad-service/: tsconfig.app.json
apps/upload-service/: tsconfig.app.json
apps/user-service/: tsconfig.app.json
libs/auth/: tsconfig.lib.json
libs/common/: tsconfig.lib.json
libs/config/: tsconfig.lib.json
libs/constants/: tsconfig.lib.json
libs/database/: tsconfig.lib.json
libs/decorators/: tsconfig.lib.json
programs/mint-jobs-escrow/programs/mint-jobs-escrow/: Cargo.toml
programs/mint-jobs-escrow/programs/mint-jobs-escrow/src/: errors.rs  lib.rs  state.rs
programs/mint-jobs-escrow/programs/mint-jobs-escrow/src/instructions/: complete_contract.rs  create_contract.rs  initialize.rs  lock.rs  mod.rs  refund.rs  release.rs  top_up.rs  withdraw.rs  withdraw_fees.rs
scripts/: docker-start.sh  docker-stop.sh  kill-ports.sh  start-services.mjs  test-contract-pdf.ts
(+199 files in other folders)
