[package]
name = "mint-jobs-escrow"
version = "0.1.0"
description = "Solana escrow program for MintJobs job funding"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mint_jobs_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.30.1"
# blake3 1.8.0 → digest 0.11 → block-buffer 0.12.0 requires edition2024 (Cargo 1.85+)
blake3 = ">=1, <1.8"
# proc-macro-crate 3.5.0 bumped to toml_edit 0.25+spec-1.1.0 → toml_datetime 1.1.1 (edition2024)
# Pin below 3.5 to stay on toml_edit 0.22.x → toml_datetime 0.6.x
proc-macro-crate = ">=3.0.0, <3.5.0"
